--- a/views/admin/layouts/adminHeader.ejs
+++ b/views/admin/layouts/adminHeader.ejs
@@ -21,6 +21,11 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 <!-- CSS Files -->
 <link id="pagestyle" href="/static/adminAssets/css/material-dashboard.css?v=3.0.0" rel="stylesheet" />
+
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
     
 
 </head>
