--- a/views/users/forgotPassword.ejs
+++ b/views/users/forgotPassword.ejs
@@ -17,9 +17,19 @@
                 <%
                 if(typeof message!=='undefined'){
                   %>
-                  <!-- <div class="alert alert-success"> -->
-                  <p style="color: green;" ><%= message%></p>
-                <!-- </div> -->
+                 
+                    <p style="color: rgb(255, 0, 0);" id="errorMessage"><%= message %></p>
+                
+                  <%
+                }
+                %>
+<!-- ===================================================================================================================================== -->
+                <%
+                if(typeof messages!=='undefined'){
+                  %>
+                 
+                    <p style="color: rgb(19, 255, 3);" id="errorMessages"><%= messages %></p>
+                
                   <%
                 }
                 %>
@@ -44,5 +54,24 @@
       </div>
     </div>
   </section>
+
+
+<!-- =========================================================================setTimeout for error================================================================ -->
+  <script>
+    setTimeout(function() {
+      var errorMessage = document.getElementById("errorMessage");
+      if (errorMessage) {
+        errorMessage.style.display = "none";
+      }
+    }, 5000);
+  </script>
+  <script>
+    setTimeout(function() {
+      var errorMessage = document.getElementById("errorMessages");
+      if (errorMessage) {
+        errorMessage.style.display = "none";
+      }
+    }, 8000);
+  </script>
 
     <%- include('../users/layouts/footer.ejs')%>
