--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -33,6 +33,11 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/styles.css">
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+	
+
 <!--===============================================================================================-->
 
 
