--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -615,6 +615,7 @@
 
 
 	<script src="/static/userAssets/js/zoom.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 		
 	
 	
