--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -201,7 +201,7 @@
                             </a>
                         </div>
                     
-                        <div class="block2-txt flex-w flex-t p-t-14">
+                        <div class="block2-txt flex-w flex-t p-t-14 ">
                             <div class="block2-txt-child1 flex-col-l">
                                 <span class="stext-105 cl3">
                                     <%= product.brand %>
@@ -215,12 +215,22 @@
                                     <span>&#8377 </span><%= product.price %>
                                 </span>
                             </div>
+
+                            
                     
-                            <div class="block2-txt-child2 flex-r p-t-3">
-                                <a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-                                    <img class="icon-heart1 dis-block trans-04" src="/static/userAssets/images/icons/icon-heart-01.png" alt="ICON">
-                                    <img class="icon-heart2 dis-block trans-04 ab-t-l" src="/static/userAssets/images/icons/icon-heart-02.png" alt="ICON">
+                            <div>
+                                <a id="cart-button" >
+                                    <button><img src="static/userAssets/img/326700_cart_shopping_icon.png" style="height: 19px; padding-right: 6px; width: 26px; margin-bottom: 6px;"></button>
+                                    
                                 </a>
+                                <a id="wishlist-button" >
+
+                                    <button><img src="/static/userAssets/images/icons/icon-heart-01.png" style="height: 19px; padding-right: 6px; width: 26px; margin-bottom: 6px;" alt="ICON"></button>
+
+                                    
+                                   
+                                </a>
+                                
                             </div>
                         </div>
 
@@ -229,7 +239,7 @@
                 </div>
             </div>
             <% }) %>
-        </div>
+        </div>                  
     
         <!-- Pagination -->
         <nav aria-label="Page navigation example">
@@ -258,6 +268,54 @@
         
     </div>
     </section>
+
+
+
+    <script>
+        
+        const wishlistButtons = document.querySelectorAll('#wishlist-button');
+    
+        
+        wishlistButtons.forEach(button => {
+            button.addEventListener('click', function (event) {
+                event.preventDefault();
+    
+                
+                button.classList.add('red-wishlist-button');
+    
+                
+                Swal.fire({
+                    title: 'Item added to your wishlist!',
+                    icon: 'success',
+                });
+            });
+        });
+
+
+        const cartButtons = document.querySelectorAll('#cart-button');
+    
+        
+        cartButtons.forEach(button => {
+            button.addEventListener('click', function (event) {
+                event.preventDefault();
+    
+                
+                
+    
+                
+                Swal.fire({
+                    title: 'Item added to your Cart!',
+                    icon: 'success',
+                });
+            });
+        });
+
+
+
+
+
+    </script>
+    
 
 <%- include('../users/mainLayout/mainFooter.ejs')%>
 
