--- a/views/admin/layouts/adminSideBar.ejs
+++ b/views/admin/layouts/adminSideBar.ejs
@@ -2,8 +2,8 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard " target="_blank">
-        <img src="/static/adminAssets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">MLIVE</span>
+        <img style="scale: 4px;" src="/static/adminAssets/images/icons/mlive logo white.png" class="navbar-brand-img h-100" alt="main_logo">
+        
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
