--- a/views/users/mainLayout/mainFooter.ejs
+++ b/views/users/mainLayout/mainFooter.ejs
@@ -252,7 +252,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</script>
 <!--===============================================================================================-->
 	<script src="/static/userAssets/js/main.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script> -->
+	<script src="/static/userAssets/js/script.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script> -->
+
+
+
 	
 
 </body>
