--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -312,27 +312,31 @@
 
 
         function addToCart(id) {
-            console.log("addToCart function called with id: " + id);
-                $.ajax({
-                  url: "/addTocart",
-                  method: "post",
-                  encoded: true,
-                  data: {
-                    id: id
-                  },
-                }).done((data) => {
-                    
-                  if (data) {
-                   
-                    console.log(data);
-                   
-                    swal("Added!", "Item has been added to Cart!", "success");
-                  }else{
-                    swal("fail to add")
-                  }
-                })
-              }
-              
+  console.log("addToCart function called with id: " + id);
+  $.ajax({
+    url: "/addTocart",
+    method: "post",
+    encoded: true,
+    data: {
+      id: id
+    },
+  }).done((data) => {
+    if (data) {
+      console.log(data);
+
+      Swal.fire({
+  position: 'top-end',
+  icon: 'success',
+  title: 'Item has been added to Cart!',
+  showConfirmButton: false,
+  timer: 1500
+})
+    } else {
+      swal("Fail to add");
+    }
+  });
+}
+
 
 
 
